# -gs-trainer

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  fuzz_bundles.py  pyproject.toml  test_garden_train.py
.github/workflows/: ci.yml  docker.yml
gs_pipeline/: .dockerignore  README.md  __init__.py  pytest.ini  requirements-cpu.txt  requirements-gpu.txt
gs_pipeline/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
gs_pipeline/metashape/: export_for_splat.py
gs_pipeline/tests/: conftest.py  test_budget.py  test_docker_assets.py  test_export_ply.py  test_filter_splats.py  test_init_from_pcd.py  test_job_state.py  test_large_scene.py  test_make_synthetic.py  test_metashape_export.py  test_oom_guard.py  test_parse_metashape.py  test_pipeline.py  test_pipeline_smoke.py  test_render_eval.py  test_scene_partition.py  test_smoke.py  test_train_mcmc_helpers.py  test_train_scaffold_helpers.py  test_ui.py
gs_pipeline/tests/fixtures/: make_synthetic.py
gs_pipeline/tests/stubs/: metashape_stub.py
gs_pipeline/trainer/: budget.py  config.yaml  export_ply.py  filter_splats.py  img_cache.py  init_from_pcd.py  job_state.py  large_scene.py  oom_guard.py  parse_metashape.py  pipeline.py  quality_report.py  render_eval.py  scene_partition.py  train_mcmc.py  train_scaffold.py  watcher.py
gs_pipeline/ui/: app.py  live_view.py  preflight.py
